fix(v0.3): WS-A self-review findings
- test that a later addition joins an update group folded into another (1)
- checkUpdate ignores an installed whole-project conflict that already exists (2)
- an update whose own Modrinth version is unknown is refused before download (8)
- a recommendation stops being staged when one of its enables is replaced (6)
- an unreadable pending.json leaves the staged bookkeeping as it is (5)
- the drop notice names every loaded queued mod, never an unloaded one (7)
- known gaps recorded: update order between updates (3), earlier Apply (4)

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BzjDikL2wqunaSiMjefimU